<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_20"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_20"
    android:layout_marginBottom="@dimen/margin_10"
    app:cardCornerRadius="@dimen/sp_10">

    <RelativeLayout
        android:id="@+id/rl_plan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_185"
        android:background="@drawable/rectangle_basic">

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="@dimen/sp_78"
            android:layout_height="@dimen/sp_85"
            android:layout_alignParentBottom="true"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mask_buy_plan" />

        <CheckBox
            android:id="@+id/chk_select_user"
            style="@style/promotion_chk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_15"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:paddingLeft="@dimen/margin_10"
            android:text="@string/existing_user"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chk_select_user"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sms"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chk_select_user"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/noti_69"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txt_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sms_399"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email_89"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txt_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/all_475"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>