<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/margin_20">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="@dimen/sp_25"
        android:layout_height="@dimen/sp_25"
        android:layout_gravity="right"
        android:padding="@dimen/margin_5"
        android:src="@drawable/ic_baseline_close_20" />

    <ImageView
        android:layout_width="@dimen/sp_100dp"
        android:layout_height="@dimen/sp_66"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/ic_backup_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_25"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/last_backup"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/margin_5"
        android:text="@string/backup_dis"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/date_time"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/google_drive"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/date_time"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/google_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/date_time"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancle"
            android:layout_width="@dimen/sp_130"
            android:layout_height="@dimen/sp_40"
            android:layout_marginRight="@dimen/margin_15"
            android:background="@drawable/grey_boader_btn"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_backup"
            android:layout_width="@dimen/sp_130"
            android:layout_height="@dimen/sp_40"
            android:background="@drawable/rectangle_150"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/back_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14" />
    </LinearLayout>
</LinearLayout>