<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context="com.festum.festumfield.Activity.LoginViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_30"
        android:layout_marginTop="@dimen/text_30"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome_txt"
        android:textColor="@color/app_color"
        android:textSize="@dimen/text_30"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_30"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/enter_phone_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/text_24"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_30"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login_des"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_50"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_30"
        android:background="@drawable/edt_bg"
        android:orientation="horizontal">

        <!--<com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:hideNameCode="true"
            app:textSize="@dimen/text_14" />-->

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/codeFlag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/country_code"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

        <View
            android:layout_width="@dimen/sp_2"
            android:layout_height="@dimen/margin_30"
            android:layout_gravity="center"
            android:background="@color/light_grey" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/enter_phone_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/margin_15"
            android:textColor="@color/edt_dark"
            android:textColorHint="@color/edt_hint"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_50"
        android:layout_margin="@dimen/margin_30"
        android:background="@drawable/login_btn_bg"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/margin_10"
        android:text="@string/continue_btn"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16" />

</LinearLayout>