<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/send_image"
        android:layout_width="@dimen/sp_50"
        android:layout_height="@dimen/sp_50"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/ic_user"
        app:civ_circle_background_color="@color/bg_grey" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_toRightOf="@+id/send_image"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/margin_16" />

    <TextView
        android:id="@+id/send_text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/time"
        android:textSize="@dimen/margin_12" />

    <TextView
        android:id="@+id/text_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_username"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/sp_5"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_toRightOf="@+id/send_image"
        android:lineSpacingExtra="@dimen/sp_6"
        android:maxLines="3"
        android:text="@string/dis"
        android:textSize="@dimen/text_14" />

    <TextView
        android:id="@+id/txt_request_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dis"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/sp_10"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_toRightOf="@+id/send_image"
        android:text="@string/pending"
        android:textColor="@color/app_color"
        android:textSize="@dimen/text_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_1"
        android:layout_below="@+id/txt_request_check"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/bg_grey" />

</RelativeLayout>